Search with no text goes to default view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,15 +17,15 @@
         <div class="filter-container">
           <p>Filters</p>
           <div class="filter-inputs right-separator lefty">
-            <input type="text" name="filter1" placeholder="random value" />
-            <input type="text" name="filter2" placeholder="random value" />
-            <input type="text" name="filter3" placeholder="random value" />
+            <input type="text" name="filter1" placeholder="Filter 1" disabled />
+            <input type="text" name="filter2" placeholder="Filter 2" disabled />
+            <input type="text" name="filter3" placeholder="Filter 3" disabled />
           </div>
 
           <div class="filter-inputs righty">
-            <input type="text" name="filter4" placeholder="random value" />
-            <input type="text" name="filter5" placeholder="random value" />
-            <input type="text" name="filter6" placeholder="random value" />
+            <input type="text" name="filter4" placeholder="Filter 4" disabled />
+            <input type="text" name="filter5" placeholder="Filter 5" disabled />
+            <input type="text" name="filter6" placeholder="Filter 6" disabled />
           </div>
 
           <div class="clear"></div>
