--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -95,7 +95,7 @@
 
   <div class="content-wrapper">
     <div class="branding">
-      <h1>Tookie</h1>
+      <h1><a href="/">Tookie</a></h1>
       <h2>The ultimate movie torrent indexer.</h2>
     </div>
 
