--- a/public/css/style3.css
+++ b/public/css/style3.css
@@ -291,14 +291,14 @@ input:focus
   margin: 0 0 60px 0;
 }
 
-.branding h1{
+.branding h1, .branding a{
   font-size: 80px;
   margin: 50px 0 20px 0;
   line-height: 40px;
   font-weight: 400;
   letter-spacing: 5px;
   font-family: 'Jura', sans-serif;
-  color: #0C84E8;
+  color: #0C84E8 !important;
 }
 
 .branding h2{
