Old version of the worker added

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -60,7 +60,7 @@
       <a href="/search/genre/<%= genres[x] %>"><%= genres[genres.length - 1] %></a>
     </p>
     <p><span class="bold">Score</span>: <%= movie.rating %>/10</p>
-    <p><span class="bold">Director</span>: <a href="#">Tom Hooper</a></p>
+    <!-- <p><span class="bold">Director</span>: <a href="#">Tom Hooper</a></p> -->
     <p><span class="bold">Stars</span>:
       <%
         var cast = movie.cast.split(',');
