--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
 
   <title><%= title %> Tookie</title>
 
-  <meta name="description" content="Tookie is a meta-search engine which indexes movie torrents from torrentz and presents all the information in a beautiful and responsive UI." />
+  <meta name="description" content="Tookie is a meta-search engine that indexes movie torrents from torrentz and presents all the information in a beautiful and responsive UI." />
   <meta name="keywords" content="tookie, torrentz, torrents, movies, movie, download movies, sabarasaba, ignacio, rivas, ignacio rivas, free movies, view movies, online movies, torrent movies" />
 
   <!-- Facebook share tags -->
@@ -22,9 +22,9 @@
     <meta property='og:title' content='Tookie !'/>
     <meta property='og:type' content='website'/>
     <meta property='og:url' content='/'/>
-    <meta property='og:image' content='http://cl.ly/image/0V3R182h0539/Image%202012-08-21%20at%203.19.01%20PM.png'/>
+    <meta property='og:image' content='http://cl.ly/image/3D3J1f0b2E02/Screen%20Shot%202013-03-01%20at%207.04.55%20PM.png'/>
     <meta property='og:site_name' content='tookie'/>
-    <meta property='og:description' content='Tookie is a meta-search engine which indexes movie torrents from torrentz and presents all the information in a beautiful and responsive UI.'/>
+    <meta property='og:description' content='Tookie is a meta-search engine that indexes movie torrents from torrentz and presents all the information in a beautiful and responsive UI.'/>
   <% } %>
 
   <link rel="stylesheet" href="/css/font-awesome.min.css" />
